--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
   "autoload": {
     "psr-4": {
       "App\\": "src",
-      "Test\\": "tests",
-      "Lib\\": "lib"
+      "Test\\": "tests"
     }
   },
   "require-dev": {
