--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,7 @@
     "monolog/monolog": "^2.1",
     "ext-pdo": "*",
     "ext-json": "*",
-    "doctrine/orm": "^2.7",
-    "laminas/laminas-authentication": "^2.7",
-    "laminas/laminas-db": "^2.11",
-    "laminas/laminas-session": "^2.9"
+    "doctrine/orm": "^2.7"
   },
   "autoload": {
     "psr-4": {
