--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "monolog/monolog": "^2.1",
     "ext-pdo": "*",
     "ext-json": "*",
-    "doctrine/orm": "^2.7"
+    "doctrine/orm": "^2.7",
+    "ext-curl": "*"
   },
   "autoload": {
     "psr-4": {
